# BOFA

./: .gitignore  Dockerfile  bo.py  plot.ipynb  pyproject.toml  run.sh
bofa/: turbo_state.py  utils.py
bofa/tasks/: env.py  grlee.py  hartmannn.py  langermann.py  langermann_any_dim.py  lasso_dna.py  lunar.py  objective.py  robopush.py  rover.py
bofa/tasks/utils/: lunar_utils.py  robopush_utils.py  rover_utils.py
lolbo/: latent_space_objective.py  lolbo.py  molecule_objective.py
lolbo/utils/: utils.py
lolbo/utils/bo_utils/: ppgpr.py  turbo.py
lolbo/utils/mol_utils/: load_data.py  mol_utils.py
lolbo/utils/mol_utils/selfies_vae/: data.py  model_positional_unbounded.py
scripts/: molecule_optimization.py  optimize.py
