[project]
name = "bofa"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Haydn Jones", email = "haydnjonest@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "botorch>=0.11.1",
    "fire",
    "git+https://github.com/haydn-jones/guacamol",
    "gpytorch>=1.11",
    "lightning",
    "more-itertools",
    "torch",
    "torchaudio",
    "torchvision",
]

[tool.ruff]
line-length = 120
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "ANN001"]
ignore = []
extend-select = ["I"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
