[project]
name = "bofa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "botorch>=0.11.3",
    "gpytorch>=1.12",
    "wandb>=0.17.7",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "torchaudio>=2.4.0",
    "fire>=0.6.0",
    "lightning>=2.4.0",
    "selfies>=2.1.2",
    "guacamol",
    "ipython>=8.27.0",
    "ipykernel>=6.29.5",
    "polars>=1.6.0",
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
    "linear-operator>=0.5.3",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.uv]
override-dependencies = ["linear-operator>=0.5.3"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["ANN001"]
extend-select = ["I"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv.sources]
guacamol = { git = "https://github.com/haydn-jones/guacamol" }
